# margrete-air-curve-converter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  vcpkg.json
aff/: 2.aff  grid.lua  project.arcproj
aff/Scenecontrol/: init.lua
config/: PROJECT  meta.h.in  meta.ini.in
src/: Config.h  DLLMain.cpp  DLLMain.h  Dialog.UI.cpp  Dialog.cpp  Dialog.h  Plugin.cpp  Plugin.h  Test.cpp  Utils.h
src/aff/: Arc.h  Parser.cpp  Parser.h
src/mgxc/: Easing.cpp  Easing.h  EasingSolver.cpp  EasingSolver.h  Interpolator.cpp  Interpolator.h  Margrete.cpp  Margrete.h  MargreteHandle.cpp  MargreteHandle.h  Note.h  Primitive.h
